# garmin-analysis

./: .env  .gitignore  README.md  personal_records.json  pyproject.toml
back-end/: main.py
back-end/gc_examples/: GarminConnect_CheatSheet.md
back-end/report_objects/: report_builder.py  report_reader.py
back_end/: README.md  __init__.py  constants.py  db.py  main.py
back_end/garmin_examples/: llm_example.py
back_end/gc_examples/: openweathermap_api_variables.md
back_end/marathon_objects/: marathon_plan_manager.py  plan_repository.py
back_end/mcp_server/: README.md  app.py  context.py  garmin_tools.py  plan_tools.py  rag_tools.py  serialization.py  server.py
back_end/predictive_models/: README.md  pca_predictive_model.py  regression_predictive_model.py
back_end/rag/: chunking.py  ingest.py  rag_repository.py  voyage_client.py
back_end/report_objects/: report_builder.py  report_manager.py  report_reader.py
front_end/: README.md  app.py  requirements.txt
garmin_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rag_docs/: README.md
